# wse-data

./: LICENSE  Makefile  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yml  e2e.yml
src/: __init__.py  cli.py  wse.py
src/data_scrappers/: utils.py
src/data_scrappers/gpw/: company_model.py  gpw_client.py  gpw_config.py  gpw_parser.py  new_connect_config.py  report_model.py
src/wse_data/: cli.py  wse.py
src/wse_data/data_scrappers/gpw/: company_model.py  failed_parsing_element_model.py  gpw_client.py  gpw_config.py  gpw_parser.py  new_connect_config.py  report_model.py  stock_quotes_model.py
src/wse_data/tests/: __init__.py
src/wse_data/tests/data/: gpw_responses.py
src/wse_data/tests/e2e/: test_wse.py
src/wse_data/tests/integration/: test_wse.py
src/wse_data/tests/unit/: test_cli.py  test_gpw_client.py  test_gpw_parser.py
tests/data/: gpw_responses.py
tests/e2e/: test_wse.py
tests/integration/: test_wse.py
tests/unit/: test_cli.py  test_gpw_client.py  test_gpw_parser.py  test_utils.py
