[tool.poetry]
name = "wse-data"
version = "0.1.0"
description = "WSE data is a library and CLI for fetching Warsaw Stock Exchange data."
authors = ["Marek Bleschke <marek.bleschke@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "wse_data", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {version = "^0.6.1", extras = ["all"]}
httpx = "^0.23.0"
pydantic = "^1.10.2"
beautifulsoup4 = "^4.11.1"
xlrd = "^2.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^3.7.8"
coverage = "^4.5.4"
pytest = "^6.2.4"
black = { version = "^22.8.0", extras = ["d"] }
respx = "^0.20.0"
mypy = "^0.971"
types-beautifulsoup4 = "^4.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wse = "wse_data.cli:app"

[tool.black]
line-length = 120

[tool.mypy]
exclude = [
    "src/wse_data/tests"
]

[[tool.mypy.overrides]]
module = "xlrd.*"
ignore_missing_imports = true
